# SeekerStone

./: .clang-format  .gitignore  CMakeLists.txt  Main.qml  idleDetector.cpp  idleDetector.h  main.cpp  qtcreator
cmake/: Utils.cmake  utils.cmake
qml/: LoadingPage.qml  Main.qml
qml/components/: NavigableColumn.qml  NavigableRow.qml
qml/utils/: FocusManager.js
src/: App.cpp  App.hpp  GamepadAdapter.cpp  GamepadAdapter.hpp  IdleManager.cpp  IdleManager.hpp  InputDetector.cpp  Link.cpp  Logger.cpp  Logger.hpp  Main.cpp  Main.hpp  inputdetector.cpp  inputdetector.h
src/common/: ElapsedTimer.hpp  Logger.cpp  Logger.hpp  LoggerAsync.hpp  RateLimiter.hpp  Settings.hpp  Utils.hpp
src/components/: GamepadAdapter.cpp  GamepadAdapter.hpp  IdleManager.cpp  IdleManager.hpp  Link.cpp  Link.hpp  Logger.cpp  Logger.hpp  Settings.cpp  Settings.hpp
src/utils/: Logger.cpp  Logger.hpp  Macros.hpp  RateLimiter.hpp
